# myGL

./: .gitignore  CMakeLists.txt
src/: Number.cpp  Number.h  main.cpp
src/linear/: Mat.h
